--- a/r-stocks-research.Rmd
+++ b/r-stocks-research.Rmd
@@ -166,43 +166,215 @@ df_stocks_full = df_stocks_full %>% select(-Revenue) # Revenue is 100% correlate
 > Overall, the low/negative correlations suggests that my original plan of using a form of linear regression will probably not result in any significant results. 
 
 ```{r maximal_information_coefficient, echo=FALSE, fig.height=15, fig.width=10, cached=TRUE}
-x = df_stocks_full %>%
-	select(-date, -symbol, -perc_change_stock_1year, -diff_above_index_1year, -contains('ratioh_')) # get rid of `ratioh` because we only want numeric columns
-y = df_stocks_full %>%
+x <- df_stocks_full %>%
+	select(-date, -symbol, -perc_change_stock_1year, -diff_above_index_1year, -dplyr::contains('ratioh_')) # get rid of `ratioh` because we only want numeric columns
+y <- df_stocks_full %>%
 	select(perc_change_stock_1year)
 
 correlations_with_perc_change <- cor(x, y=y, use='complete.obs')
 
-df_correlations = data_frame(variable=rownames(correlations_with_perc_change), correlation=as.numeric(correlations_with_perc_change)) %>%
+df_correlations <- data_frame(variable = rownames(correlations_with_perc_change), correlation = as.numeric(correlations_with_perc_change)) %>%
 	mutate(correlation_rank = dense_rank(desc(correlation))) %>%
 	arrange(correlation_rank) %>% select(variable, correlation, correlation_rank)
 
 # original implementation found http://menugget.blogspot.de/2014/09/maximal-information-coefficient-part-ii.html
 library(minerva)
-minerva_results <- mine(x, y=y$perc_change_stock_1year, alpha=0.7)
+minerva_results <- mine(x, y = y$perc_change_stock_1year, alpha = 0.7)
 res <- data.frame(variable = rownames(minerva_results$MIC), MIC = c(minerva_results$MIC))# %>%
 res <- res %>% mutate(MIC_rank = dense_rank(desc(MIC))) %>% arrange(MIC_rank)
 final_correlations = inner_join(res, df_correlations, by = 'variable')
 
-long_correaltions = final_correlations %>%
+long_correaltions <- final_correlations %>%
 	mutate(variable = factor(variable, levels = rev(variable))) %>%
 	select(variable, MIC, correlation) %>%
 	gather(metric, amount, -variable)
 
-long_correaltions$type = 'absolute'
-long_correaltions$type = ifelse(grepl('^cs_', long_correaltions$variable), 'common size', long_correaltions$type)
-long_correaltions$type = ifelse(grepl('^ratios_', long_correaltions$variable), 'ratio', long_correaltions$type)
+long_correaltions$type <- 'absolute'
+long_correaltions$type <- ifelse(grepl('^cs_', long_correaltions$variable), 'common size', long_correaltions$type)
+long_correaltions$type <- ifelse(grepl('^ratios_', long_correaltions$variable), 'ratio', long_correaltions$type)
 
-ggplot(long_correaltions, aes(x = amount, y=variable, col=metric)) +
-	geom_point(size=2, alpha=0.9) +
-	geom_ref_line(v=0) +
-    facet_grid(type ~ ., space='free_y', scales = "free") +
+ggplot(long_correaltions, aes(x = amount, y = variable, col = metric)) +
+	geom_point(size = 2, alpha = 0.9) +
+	geom_ref_line(v = 0) +
+    facet_grid(type ~ ., space = 'free_y', scales = "free") +
 	ggtitle('MIC & Correlations') + ylab('Variables') + xlab('Amount') + theme(axis.text.x = element_text(angle = 50, hjust = 1)) + guides(fill=FALSE)
 ```
 
-```{r , echo=FALSE}
+## Looking at Data 
+
+- Looking at variables against `perc_change_stock_1year`
+
+### Variables with High MIC
+
+```{r mic_graphs, echo=FALSE}
+ggplot(data = df_stocks_full, mapping = aes(x = DividendsperShareCommonStockPrimaryIssue, y = perc_change_stock_1year)) +
+	geom_point(alpha=0.2)
+ggplot(data = df_stocks_full, mapping = aes(x = TotalRevenue, y = perc_change_stock_1year)) +
+	geom_point(alpha=0.2)
+ggplot(data = df_stocks_full, mapping = aes(x = cs_accounts_payable, y = perc_change_stock_1year)) +
+	geom_point(alpha=0.2)
+ggplot(data = df_stocks_full, mapping = aes(x = cs_net_income, y = perc_change_stock_1year)) +
+	geom_point(alpha=0.2)
+ggplot(data = df_stocks_full, mapping = aes(x = ratios_quick_ratio, y = perc_change_stock_1year)) +
+	geom_point(alpha=0.2)
+ggplot(data = df_stocks_full, mapping = aes(x = ratios_current_ratio, y = perc_change_stock_1year)) +
+	geom_point(alpha=0.2)
+ggplot(data = df_stocks_full, mapping = aes(x = net_profit_margin, y = perc_change_stock_1year)) +
+	geom_point(alpha=0.2)
+ggplot(data = df_stocks_full) +
+	geom_hex(mapping = aes(x = net_profit_margin, y = perc_change_stock_1year))
+```
+
+> It is interesting that there is no clear pattern in `net_profit_margin` vs. `perc_change_stock_1year`. I would have expected a somewhat linear relationship.
+
+### Variables with High MIC
+
+```{r correlation_graphs, echo=FALSE}
+ggplot(data = df_stocks_full, mapping = aes(x = cs_current_assets, y = perc_change_stock_1year)) +
+	geom_point(alpha=0.2)
+ggplot(data = df_stocks_full, mapping = aes(x = CapitalExpenditures, y = perc_change_stock_1year)) +
+	geom_point(alpha=0.2)
+ggplot(data = df_stocks_full, mapping = aes(x = cs_capital_expenditures, y = perc_change_stock_1year)) +
+	geom_point(alpha=0.2)
+ggplot(data = df_stocks_full, mapping = aes(x = cs_dividends_paid_out, y = perc_change_stock_1year)) +
+	geom_point(alpha=0.2)
+```
+
+> No patterns that I can see.
+
+```{r normality_graphs, echo=FALSE}
+ggplot(data = df_stocks_full, aes(perc_change_stock_1year)) +
+	geom_freqpoly(bins = 15)
+ggplot(data = df_stocks_full, aes(ratios_quick_ratio)) +
+	geom_freqpoly(bins = 15)
+```
+
+> Most data support a semi-normally distributed data, but without pattern in relation to the change in the stock price a year from the release of the financial statement (`perc_change_stock_1year`).
+
+## Segmentation and Clustering
+
+- Before we get into prediction, I'm wondering if there distinguishable segments that we could organic the stocks into, from which patterns (in the dependent variables) would would arise.
+- I'm going to try to leave the dependent variables out (e.g. `perc_change_stock_1year`) and then add them back in after clusting (because presumably if we would like to use clustering to aid in prediction, we would have to cluster on only the independent variables that we would have at the time of clustering/prediction).
+
+> I will be using hierarchical clustering, primarily because k-means clustering starts with a random choice of cluster center and, therefore, will most likely yield different results each time it is ran (with the same data). Hierarchical will most likely be more consistent.
+>
+> I'll attempt to cluster on common size ratios as well as some of the more common ratios 
+
+### Common Size Clustering
+
+- I'll start with all `cs_` columns, but I'll probably scale down and pick specific columns based on high MIC scorees and common sense
+
+```{r clustering_common_size, echo=FALSE}
+df_stocks_common_size <- df_stocks_full %>% select(perc_change_stock_1year, dplyr::contains('cs_'))
+
+if(sum(duplicated(df_stocks_common_size)) > 0)
+{
+	stop('duplicated common size stock records')
+}
+
+if(any(is.na(df_stocks_common_size)))
+{
+	stop('common size stock records contain NAs')
+}
+
+ideal_clusters = get_ideal_number_of_clusters(data_frame=df_stocks_common_size, named_column='perc_change_stock_1year')
+hierarchical_dendogram(data_frame=df_stocks_common_size, named_column='perc_change_stock_1year', ideal_cluster_size=ideal_clusters, path=NULL)
+
+cluster_plus_minus = 5
+num_clusters = 7 # ideal_clusters
+hierarchical_results = hierarchical_cluster_analysis(data_frame=df_stocks_common_size, merge_column='perc_change_stock_1year', 
+	num_clusters=num_clusters, plus_minus=cluster_plus_minus)
+mstd = hierarchical_get_clusters_mean_st_dev(hierarchical_results=hierarchical_results)
+best_cluster_index_norm = which(mstd == min(mstd))
+df_stocks_common_size_clusters = hierarchical_merge_cluster_data(original_data_frame=df_stocks_common_size, 
+	merge_column='perc_change_stock_1year', num_clusters=num_clusters, plus_minus=cluster_plus_minus)
+
+hierarchical_heatmaps = save_hierarchical_heatmaps(hierarchical_results=hierarchical_results)
+
+hierarchical_heatmaps[[1]]
+df_stocks_common_size_clusters %>% group_by(cluster_2) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+hierarchical_heatmaps[[2]]
+df_stocks_common_size_clusters %>% group_by(cluster_3) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+hierarchical_heatmaps[[3]]
+df_stocks_common_size_clusters %>% group_by(cluster_4) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+hierarchical_heatmaps[[4]]
+df_stocks_common_size_clusters %>% group_by(cluster_5) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+hierarchical_heatmaps[[5]]
+df_stocks_common_size_clusters %>% group_by(cluster_6) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+hierarchical_heatmaps[[6]]
+df_stocks_common_size_clusters %>% group_by(cluster_7) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+hierarchical_heatmaps[[7]]
+df_stocks_common_size_clusters %>% group_by(cluster_8) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+hierarchical_heatmaps[[8]]
+df_stocks_common_size_clusters %>% group_by(cluster_9) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+hierarchical_heatmaps[[9]]
+df_stocks_common_size_clusters %>% group_by(cluster_10) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+hierarchical_heatmaps[[10]]
+df_stocks_common_size_clusters %>% group_by(cluster_11) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+hierarchical_heatmaps[[11]]
+df_stocks_common_size_clusters %>% group_by(cluster_12) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
 
 ```
+
+> The calculated number of ideal clusters is `r ideal_clusters`, which is consistent with the dendogram above. 
+>
+> While there are some interest patterns in the clusters, it doesn't appear that the clusters result in different (future;1-year) stock prices, showing in the corresponding tables.
+
+### Common Size Clustering
+
+```{r clustering_ratios, echo=FALSE}
+df_stocks_ratios <- df_stocks_full %>% select(perc_change_stock_1year, dplyr::contains('ratios_'), dplyr::contains('ratioh_'))
+
+if(sum(duplicated(df_stocks_ratios)) > 0)
+{
+    stop('duplicated common size stock records')
+}
+
+if(any(is.na(df_stocks_ratios)))
+{
+    stop('common size stock records contain NAs')
+}
+
+ideal_clusters = get_ideal_number_of_clusters(data_frame=df_stocks_ratios, named_column='perc_change_stock_1year')
+hierarchical_dendogram(data_frame=df_stocks_ratios, named_column='perc_change_stock_1year', ideal_cluster_size=ideal_clusters, path=NULL)
+
+cluster_plus_minus = 5
+num_clusters = 7#ideal_clusters
+hierarchical_results = hierarchical_cluster_analysis(data_frame=df_stocks_ratios, merge_column='perc_change_stock_1year', 
+	num_clusters=num_clusters, plus_minus=cluster_plus_minus)
+mstd = hierarchical_get_clusters_mean_st_dev(hierarchical_results=hierarchical_results)
+best_cluster_index_norm = which(mstd == min(mstd))
+df_stocks_ratios_clusters = hierarchical_merge_cluster_data(original_data_frame=df_stocks_ratios, 
+	merge_column='perc_change_stock_1year', num_clusters=num_clusters, plus_minus=cluster_plus_minus)
+
+hierarchical_heatmaps = save_hierarchical_heatmaps(hierarchical_results=hierarchical_results)
+
+hierarchical_heatmaps[[1]]
+df_stocks_ratios_clusters %>% group_by(cluster_2) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+hierarchical_heatmaps[[2]]
+df_stocks_ratios_clusters %>% group_by(cluster_3) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+hierarchical_heatmaps[[3]]
+df_stocks_ratios_clusters %>% group_by(cluster_4) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+hierarchical_heatmaps[[4]]
+df_stocks_ratios_clusters %>% group_by(cluster_5) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+hierarchical_heatmaps[[5]]
+df_stocks_ratios_clusters %>% group_by(cluster_6) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+hierarchical_heatmaps[[6]]
+df_stocks_ratios_clusters %>% group_by(cluster_7) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+hierarchical_heatmaps[[7]]
+df_stocks_ratios_clusters %>% group_by(cluster_8) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+hierarchical_heatmaps[[8]]
+df_stocks_ratios_clusters %>% group_by(cluster_9) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+hierarchical_heatmaps[[9]]
+df_stocks_ratios_clusters %>% group_by(cluster_10) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+hierarchical_heatmaps[[10]]
+df_stocks_ratios_clusters %>% group_by(cluster_11) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+hierarchical_heatmaps[[11]]
+df_stocks_common_size_clusters %>% group_by(cluster_12) %>% summarize(count = n(), median_stock_change=median(perc_change_stock_1year), standard_dev_stock_change=sd(perc_change_stock_1year))
+
+```
+
+> It will be an interesting experiment to divide the stocks up by cluster to see if machine learning algorithms predict better when focusing on clustered data. The drawback will be a reduced test/training set.
 
 ---------------------------------------------------------------------------------------------------------------------------------------
 
@@ -211,14 +383,14 @@ ggplot(long_correaltions, aes(x = amount, y=variable, col=metric)) +
 
 ```{r sandbox}
 ggplot(data = df_stocks_full, mapping = aes(x = DividendsperShareCommonStockPrimaryIssue, y = perc_change_stock_1year)) +
-	geom_point(alpha=0.2) # alpha avoids overfiting
+	geom_point(alpha=0.2)
 
 ggplot(data = df_stocks_full, mapping = aes(x = ratios_quick_ratio, y = perc_change_stock_1year)) +
-	geom_point(alpha=0.2) # alpha avoids overfiting
+	geom_point(alpha=0.2)
 
 
 ggplot(data = df_stocks_full, mapping = aes(x = TotalRevenue, y = perc_change_stock_1year)) +
-	geom_point(alpha=0.2) # alpha avoids overfiting
+	geom_point(alpha=0.2)
 
 # makes sense that revenue isn't necessarily correlated with perc_change_stock_1year becuase revenue doesn't guarantee success or profit
 
@@ -231,7 +403,7 @@ ggplot(data = df_stocks_full, aes(perc_change_stock_1year)) +
 # perhaps clustering data will help, since 
 
 ggplot(data = df_stocks_full, mapping = aes(x = net_profit_margin, y = perc_change_stock_1year)) +
-	geom_point(alpha=0.2) # alpha avoids overfiting
+	geom_point(alpha=0.2)
 
 # makes sense that revenue isn't necessarily correlated with perc_change_stock_1year becuase revenue doesn't guarantee success or profit
 
@@ -245,10 +417,6 @@ ggplot(data = df_stocks_full, aes(net_profit_margin)) +
 
 # temp = df_stocks_full %>% filter(net_profit_margin >= 0.5)
 # # net profit margin is right skewed, there are `r nrow(temp)` stocks that have net profit margin >= 50%, although after review stock information, they look like legitimate values/symbols.
-
-
-
-
 ```
 
 
